@@ -66,4 +66,5 @@ TODO: maybe work around 3.996gb barrier in pread/pwrite as well, maybe readahead
         - use utime now uses nanosecond resolution on posix 2008 systems.
         - allow taking advantage of posix 2008 xxxat functions and fdopendir
           by implementing a working directory abstraction.
+        - make readahead emulation behave more like actual readahead by never failing.
 
